--- a/제로초 인강/NAVERNEW/NaverClone.html
+++ b/제로초 인강/NAVERNEW/NaverClone.html
@@ -7,9 +7,13 @@
     <title>NAVER</title>
     <style>
 
+        html, body{
+            margin: 0;
+            padding: 0;
+        }
+
         #wrap {
             text-align: center;
-            
         }
 
         #wrap-center {
@@ -18,12 +22,24 @@
             display: inline-block;
         }
 
+        #header-hamburger {
+            margin-top: 18px;
+            background-color: blue;
+            width: 46px;
+            height: 46px;
+        }
+
+        #main {
+            height: 2000px;
+        }
     </style>
 </head>
 <body>
     <div id="wrap">
         <div id="wrap-center">
-            <div id="header"></div>
+            <div id="header">
+                <div id="header-hamburger"></div>
+            </div>
             <div id="search"></div>
             <div id="nav"></div>
             <div id="main"></div>
