--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -20,14 +20,27 @@
             width: 1280px;
             background-color: yellow;
             display: inline-block;
+            padding: 10px;
+        }
+
+        #header {
+            text-align: left;
         }
 
         #header-hamburger {
             margin-top: 18px;
-            background-color: blue;
-            width: 46px;
-            height: 46px;
+            display: inline-block;
         }
+
+        #header-hamburger > div {
+            background-image: url(./sp_main.png);
+            width: 26px;
+            height: 26px;
+            background-repeat: no-repeat;
+            background-size: 422px 405px;
+            background-position: -285px -156px;
+        }
+
 
         #main {
             height: 2000px;
@@ -38,7 +51,9 @@
     <div id="wrap">
         <div id="wrap-center">
             <div id="header">
-                <div id="header-hamburger"></div>
+                <div id="header-hamburger">
+                    <div></div>
+                </div>
             </div>
             <div id="search"></div>
             <div id="nav"></div>
