--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -92,9 +92,13 @@
 
         #header {
             text-align: left;
+            position: relative;
         }
 
         #header-hamburger {
+            position: absolute;
+            top: 18px;
+            left: 1px;
             margin-top: 18px;
             padding: 10px;
             display: inline-block;
@@ -103,9 +107,16 @@
             cursor: pointer;
         }
 
-        #header-hamburger:hover {
+        #header-hamburger:hover::before {
+            position: absolute;
+            content: ' ';
+            left: 1px;
+            top: 1px;
+            width: 44px;
+            height: 44px;
             background-color: var(--color_option_bg);
             border-radius: 50%;
+            padding: 9px;
         }
 
         #header-hamburger > div {
