--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -74,7 +74,7 @@
             --color_shop_rgb: 152, 88, 245;
         }
 
-        html, body{
+        html, body, form{
             margin: 0;
             padding: 0;
         }
@@ -93,6 +93,7 @@
         #header {
             text-align: left;
             position: relative;
+            height: 64px;
         }
 
         #header-hamburger, #header-notice, #header-naverpay, #header-talk, #header-shop {
@@ -178,7 +179,6 @@
             background-position: -34px -325px; /* 비례 확대에 따라 위치 조정 */        
         }   
 
-
         #main {
             height: 2000px;
         }
@@ -191,6 +191,7 @@
             margin: -1px;
             overflow: hidden;
         }
+
     </style>
 </head>
 <body>
@@ -228,7 +229,47 @@
                     <!-- ::after -->
                 </button>
             </div>
-            <div id="search"></div>
+            <style>
+                #search > form{
+                    display: inline-block;
+                    width: 706;
+                    height: 60;
+                    border: 1px solid #03c75a;
+                    border-radius: 33px;
+                    text-align: left;
+                }
+
+                #search > form > input {
+                    width: 480;
+                    height: 100%;
+                    padding: 17px 0px;
+                    border: none;
+                    outline: none;
+                }
+
+                #search > form a {
+                    width: 68;
+                    height: 100%;
+                    padding: 17px;
+                    margin-right: 12px;
+                }
+
+                #search > form svg {
+                    width: 24;
+                    height: 24;
+                }
+
+            </style>
+            <div id="search">
+                <form action="#">
+                    <a href="">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.273 12.845 7.376 0H0v24h7.727V11.155L16.624 24H24V0h-7.727v12.845z"></path></svg>
+                    </a>
+                    <label for="search-input" class="blind">검색어 입력</label>
+                    <input id="search-input" type="text" />
+                    <button class="blind">검색</button>
+                </form>
+            </div>
             <div id="nav"></div>
             <div id="main"></div>
         </div>
