--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -231,7 +231,7 @@
             </div>
             <style>
                 #search > form{
-                    display: inline-block;
+                    display: inline-flex;
                     width: 706px;
                     height: 60px;
                     border: 1px solid #03c75a;
@@ -240,10 +240,13 @@
                 }
 
                 #search-svg {
-                    display: inline-block;
+                    display: inline-flex;
+                    justify-content: ceter;
+                    align-items: center;
                     width: 67px;
                     margin-right: 12px;
                     height: 100%;
+                    padding-left: 10px;
                 }
 
                 #search-svg svg {
@@ -264,7 +267,16 @@
                 }
 
                 #search-right {
-                    display: inline-block;
+                    flex: 1;
+                    display: flex;
+                    align-items: stretch;
+                    justify-content: flex-end;
+                }
+
+                #search-keyboard, #search-recent, #search-button{
+                    background: transparent;
+                    border: none;
+                    cursor: pointer;
                 }
 
                 #search-keyboard::before {
