--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -243,6 +243,7 @@
                     box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
                 }
 
+
                 #search-svg {
                     display: inline-flex;
                     justify-content: ceter;
@@ -251,6 +252,20 @@
                     margin-right: -27px;
                     height: 100%;
                     padding-left: 20px;
+                }
+
+                #search-svg::after {
+                    display: none;
+                }
+                #search > form:focus-within #search-svg::after {
+                    content: '';
+                    width: 1px;
+                    height: 20px;
+                    background-color: #e4e4e4;
+                    position: absolute;
+                    display: inline-block;
+                    left: 398px;
+                    top: 72px;
                 }
 
                 #search-svg svg {
