--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -85,7 +85,7 @@
 
         #wrap-center {
             width: 1280px;
-            background-color: yellow;
+            background-color: white;
             display: inline-block;
             padding: 10px;
         }
@@ -179,9 +179,6 @@
             background-position: -34px -325px; /* 비례 확대에 따라 위치 조정 */        
         }   
 
-        #main {
-            height: 2000px;
-        }
 
         .blind {
             position: absolute;
@@ -264,8 +261,8 @@
                     background-color: #e4e4e4;
                     position: absolute;
                     display: inline-block;
-                    left: 398px;
-                    top: 72px;
+                    left: 405px;
+                    top: 71px;
                 }
 
                 #search-svg svg {
@@ -366,7 +363,103 @@
                     </div>
                 </form>
             </div>
-            <div id="nav"></div>
+
+            <style>
+                #nav > ul {
+                    display: flex;
+                    list-style-type: none;
+                    justify-content: center;
+                    font-size: 1.4rem;
+                    line-height: 20px;
+                }
+
+                nav a {
+                    text-decoration: none;
+                }
+
+                #nav a:visited {
+                    color: black;
+                }
+
+                nav li {
+                    width: 64px;
+                    margin-left: 4px;
+                }
+
+                #nav li:nth-of-type(1){
+                    margin-left: 0;
+                }
+                #nav li:nth-of-type(2){
+
+                }
+                #nav li:nth-of-type(3){
+
+                }
+            </style>
+            <div id="nav">
+                <ul>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>메일</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>카페</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>블로그</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>스토어</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>뉴스</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>증권</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>부동산</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>지도</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span>웹툰</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div></div>
+                            <span class="blind">더보기</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div id="main"></div>
         </div>
     </div>
