--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -544,7 +544,7 @@
 
             <style>
                 #main{
-                    margin-top: 51px;
+                    margin-top: 23px;
                     display: flex;
                 }
 
@@ -578,6 +578,61 @@
                 }
                 #main-login {
                     height: 164px;
+                    padding: 21px 20px 18px;
+                    font-size: 1.4rem;
+                    display: flex;
+                    flex-flow: column;
+                }
+                #main-login > div:first-of-type {
+                    line-height: 20px;
+                }
+
+                #main-login-button {
+                    margin-top: 13px;
+                    padding: 17px 0;
+                    background-color: #03C75A;
+                    height: 22px;
+                    border-radius: 4px;
+                    color: white;
+                    text-decoration: none;
+                    margin-bottom: 16px;
+                }
+
+                #main-login-button i {
+                    vertical-align: -1px;
+                    background-image: url(./sp_main.png);
+                    background-size: 451px 436px;
+                    background-position: 1px -298px;
+                    background-repeat: no-repeat;
+                    width: 72px;
+                    height: 14px;
+                    display: inline-block;
+                    margin: 3px 8px 0px 2px;
+                }
+
+                #main-login > div:last-of-type {
+                    font-size: 1.2rem;
+                    font-display: flex;
+                    justify-content: center;
+                }
+                #main-login > div:last-of-type a {
+                    text-decoration: none;
+                    columns: var(--color_caption2);
+                    letter-spacing: 0.1px;
+                }
+                
+                #main-login > div:last-of-type a:hover {
+                    text-decoration: underline;
+                }
+
+                #main-login > div:last-of-type > a:nth-of-type(2)::before, #main-login > div:last-of-type > a:nth-of-type(2)::after {
+                    content: '';
+                    display: inline-block;
+                    width: 1px;
+                    height: 10px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    margin: 4px 12px 0;
                 }
                 #main-right-ad {
                     height: 240px;
@@ -606,7 +661,15 @@
                     <section id="main-shopping"></section>
                 </div>
                 <div id="main-right">
-                    <section id="main-login"></section>
+                    <section id="main-login">
+                        <div>네이버를 더 안전하고 편리하게 이용하세요</div>
+                        <a href="#" id="main-login-button"><i></i>로그인</a>
+                        <div>
+                            <a href="#">아이디 찾기</a>
+                            <a href="#">비밀번호 찾기</a>
+                            <a href="#">회원가입</a>
+                        </div>
+                    </section>
                     <aside id="main-right-ad"></aside>
                     <section id="main-weather" class="main-weather-and-stock">
                         <header>날씨</header>
