--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -661,13 +661,46 @@
                     flex: 1;
                     padding: 18px 20px;
                 }
+                #main-newstand-top .dot::before{
+                    content: '';
+                    display: inline-block;
+                    width: 4px;
+                    height: 4px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    margin: 9px 7px 0;
+                    border-radius: 50%;
+                    vertical-align: 5px;
+                }
+                #main-newstand-top .slash, #main-newstand-top .dot {
+                    color: rgba(8,8,8,.5);
+                    font-weight: 800;
+                }
+                #main-newstand-top .slash {
+                    position: relative;
+                    padding-left: 26px;
+                    font-size: 1.6rem;
+                    color: rgba(8,8,8,.5);
+                }
+                #main-newstand-top .slash::before {
+                    content: '';
+                    display: inline-block;
+                    position: absolute;
+                    top: 4px;
+                    left: 13px;
+                    width: 1px;
+                    height: 15px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    transform: skewX(-15deg);
+                }
                 #main-newstand header {
                     font-size: 1.6rem;
                     color: rgba(8, 8, 8, .5);   
                     display: flex;
                     justify-content: flex-start;
                     line-height: 23px;
-                    margin-bottom: 37px;
+                    margin-bottom: 16px;
                 }
                 #main-newstand header .bold {
                     font-weight: bold;
@@ -676,10 +709,93 @@
                 #main-newstand-gray {
                     display: flex;
                     justify-content: flex-start;
-                    height: 50px;
+                    height: 26px;
                     padding: 12px 20px;
                     background-color:  var(--color_option_bg);
                     border-radius: 4px;
+                    font-size: 1.4rem;
+                    line-height: 26px;
+                }
+                #main-newstand-gray .left{
+                    flex: 1;
+                    display: flex;
+                }
+
+                #main-newstand-gray .left > a:first-of-type {
+                    width: 85.5px;
+                }
+
+                #main-newstand-gray .left > a:first-of-type::after {
+                    content: '';
+                    background-image: url(./sp_main.png);
+                    background-size: 452px 436px;
+                    background-position: -236px -183px;
+                    background-repeat: no-repeat;
+                    width: 9px;
+                    height: 6px;
+                    display: inline-block;
+                    margin: 10px 0 0 5px;
+                    vertical-align: top;
+                }
+
+                #main-newstand-animation {
+                    padding-left: 25px;
+                    position: relative;
+                }
+
+                #main-newstand-animation::before{
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 7px;
+                    left: 12px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    width: 1px;
+                    height: 12px;
+                }
+
+                #main-newstand-animation a:first-of-type{
+                    vertical-align: top;
+                }
+
+                #main-newstand-animation a:first-of-type::after{
+                    content: '';
+                    display: inline-block;
+                    width: 3px;
+                    height: 3px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
+                    margin: 12px 6px 0 6px;
+                    border-radius: 50%;
+                    vertical-align: 5px;
+                }
+
+                #main-newstand-animation a:last-of-type{
+                    text-overflow: ellipsis;
+                    width: 400px;
+                    white-space: nowrap;
+                    display: inline-block;
+                    overflow: hidden;
+                }
+                #main-newstand-gray .right {
+                    display: flex;
+                }
+                #main-newstand-gray .bold {
+                    font-weight: bold;
+                    padding-left: 25px;
+                    position: relative;
+                }
+                #main-newstand-gray .bold::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 7px;
+                    left: 12px;
+                    width: 1px;
+                    height: 14px;
+                    background-color: #d3d5d7;
+                    background-color: var(--color_dot_divider);
                 }
                 #main-newstand a {
                     text-decoration: none;
@@ -694,15 +810,17 @@
                     display: grid;
                     justify-content: center;
                     align-items: center;
-                    height: 224px;
-                    width: 790px;
+                    height: 242px;
                     grid-gap: 1px;
                     background-color: var(--color_border_in);
                     grid-template-rows: repeat(4, 1fr);
+                    width: 788px;
                     grid-template-columns: repeat(6, 1fr);
                     border: 1px solid var(--color_border_in);
                     border-radius: 4px;
-                    margin-top: 18px;
+                    margin-top: 0px;
+                    margin-left: 21px;
+                    margin-bottom: 23px;
                 }
                 #main-newstand-grid > div {
                     height: 100%;
@@ -724,20 +842,22 @@
                         <div id="main-newstand-top">
                             <header>
                                 <a href="#" class="bold">뉴스스탠드</a>
-                                <a href="#">언론사편집</a>
-                                <a href="#">엔터</a>
-                                <a href="#">스포츠</a>
-                                <a href="#">경제</a>
+                                <a href="#" class="dot">언론사편집</a>
+                                <a href="#" class="slash">엔터</a>
+                                <a href="#" class="slash">스포츠</a>
+                                <a href="#" class="slash">경제</a>
                             </header>
                             <di id="main-newstand-gray">
-                                <div>
+                                <div class="left">
                                     <a href="#">전체언론사</a>
-                                    <a href="#">연합뉴스</a>
-                                    <a href="#">나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파</a>
+                                    <div id="main-newstand-animation">
+                                        <a href="#">연합뉴스</a>
+                                        <a href="#">나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파나 지금 배고파</a>
+                                    </div>
                                 </div>
-                                <div>
+                                <div class="right">
                                     <a href="#">뉴스스탠드</a>
-                                    <a href="#">뉴스홈</a>
+                                    <a href="#" class="bold">뉴스홈</a>
                                 </div>
                             </div>
                             <div id="main-newstand-grid">
