--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -571,9 +571,6 @@
                     margin-bottom: 16px;
                 }
 
-                #main-shopping {
-                    height: 560px;
-                }
                 #main-login {
                     height: 164px;
                     padding: 21px 20px 18px;
@@ -657,7 +654,7 @@
                     display: flex;
                     flex-flow: column;
                 }
-                #main-newstand-top {
+                #main-newstand-top, #main-shopping-top {
                     flex: 1;
                     padding: 18px 20px;
                 }
@@ -672,17 +669,17 @@
                     border-radius: 50%;
                     vertical-align: 5px;
                 }
-                #main-newstand-top .slash, #main-newstand-top .dot {
+                .left-section .slash, .left-section .dot {
                     color: rgba(8,8,8,.5);
                     font-weight: 800;
                 }
-                #main-newstand-top .slash {
+                .left-section .slash {
                     position: relative;
                     padding-left: 26px;
                     font-size: 1.6rem;
                     color: rgba(8,8,8,.5);
                 }
-                #main-newstand-top .slash::before {
+                .left-section .slash::before {
                     content: '';
                     display: inline-block;
                     position: absolute;
@@ -694,7 +691,7 @@
                     background-color: var(--color_dot_divider);
                     transform: skewX(-15deg);
                 }
-                #main-newstand header {
+                .left-section header {
                     font-size: 1.6rem;
                     color: rgba(8, 8, 8, .5);   
                     display: flex;
@@ -702,7 +699,7 @@
                     line-height: 23px;
                     margin-bottom: 16px;
                 }
-                #main-newstand header .bold {
+                .left-section header .bold {
                     font-weight: bold;
                     color: black;
                 }
@@ -797,13 +794,13 @@
                     background-color: #d3d5d7;
                     background-color: var(--color_dot_divider);
                 }
-                #main-newstand a {
+                .left-section a {
                     text-decoration: none;
                 }
-                #main-newstand a:visited{
+                .left-section a:visited{
                     color: inherit;
                 }
-                #main-newstand a:hover {
+                .left-section a:hover {
                     text-decoration: underline;
                 }
                 #main-newstand-grid {
@@ -830,7 +827,7 @@
                     align-items: center;
                 }
 
-                #main-newstand footer {
+                .left-section footer {
                     border-top: 1px solid var(--color_border_in);
                     padding: 10px 0 11px;
                     font-size: 1.3rem;
@@ -884,7 +881,7 @@
                 }
 
 
-                #main-newstand footer .prev, #main-newstand footer .next {
+                .left-section footer .prev, .left-section footer .next {
                     background: none;
                     border: none;
                     content: '';
@@ -903,11 +900,11 @@
                     align-items: center;
                 }
 
-                #main-newstand footer .prev::before {
+                .left-section footer .prev::before {
                     transform: rotate(180deg);
                 }
 
-                #main-newstand footer .prev::before, #main-newstand footer .next::before {
+                .left-section footer .prev::before, .left-section footer .next::before {
                     content: "";
                     display: block;
                     background-image: url(https://pm.pstatic.net/resources/asset/sp_main.30918f90.png);
@@ -917,21 +914,50 @@
                     width: 10px;
                     height: 12px;
                 }
-                #main-newstand footer .text {
+                .left-section footer .text {
                     padding: 0 16px;
-                    width: 156px;
+                    min-width: 156px;
                 }
-                #main-newstand footer .news{
+                .left-section footer .hot{
+                    color: #9859f5;
+                }
+                .left-section footer .news{
                     color: var(--color_news)
                 }
-                #main-newstand footer .total {
+                .left-section footer .total {
                     color: rgba(96,96,96,.5);
+                }
+                #main-shopping {
+                    height: 560px;
+                    display: flex;
+                    flex-flow: column;
+                }
+                #main-shopping-top {
+                    padding-top: 19px;
+                }
+
+                #main-shopping footer .text {
+                    min-width: 176px;
+                }
+                #main-shopping-gray{
+                    display: flex;
+                }
+                #main-shopping-gray .left{
+                    width: 668px;
+                    height: 50px;
+                    padding: 15px 20px 14px;
+                    display: flex;
+                    background-color: var(--color_block_bg);
+                }
+                #main-shopping-gray .right{
+                    margin-left: auto;
+                    padding: 10px 0;
                 }
             </style>
             <main id="main">
                 <div id="main-left">
                     <aside id="main-left-ad"></aside>
-                    <section id="main-newstand">
+                    <section id="main-newstand" class="left-section">
                         <div id="main-newstand-top">
                             <header>
                                 <a href="#" class="bold">뉴스스탠드</a>
@@ -988,7 +1014,36 @@
                             <button class="grid"><span class="blind">격자보기</span></button>
                         </footer>
                     </section>
-                    <section id="main-shopping"></section>
+                    <section id="main-shopping" class="left-section">
+                        <div id="main-shopping-top">
+                            <header>
+                                <a href="#" class="bold">쇼핑</a>
+                                <a href="#" class="slash">맨즈</a>
+                                <a href="#" class="slash">원쁠딜</a>
+                                <a href="#" class="slash">쇼핑라이브</a>
+                            </header>
+                            <div id="main-shopping-gray">
+                                <div class="left">
+                                    <a href="#">오늘의 혜택</a>
+                                    <div>
+                                        <a href="#">제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파제로초 지금 배고파</a>
+                                    </div>
+                                </div>
+                                <div class="right">
+                                    <span>1</span>
+                                    <span>/18</span>
+                                    <button class="prev"><span class="blind">이전페이지</span></button>
+                                    <button class="next"><span class="blind">다음페이지</span></button>
+                                </div>
+                            </div>
+                            <div id="main-shopping-grid">
+                            </div>
+                        <footer>
+                            <button class="prev"><span class="blind">이전 페이지</span></button>
+                            <div class="text"><span class="hot">쇼핑핫아이템</span>&nbsp;더보기&nbsp;1<span class="total">/18</span></div>
+                            <button class="next"><span class="blind">다음 페이지</span></button>
+                        </footer>
+                    </section>
                 </div>
                 <div id="main-right">
                     <section id="main-login">
