--- a/제로초 인강/NaverClone.html
+++ b/제로초 인강/NaverClone.html
@@ -1092,8 +1092,8 @@
                                     <div class="image"></div>
                                     <div class="text">독보적인 퀄리티 우린품격을입어요</div>
                                 </div>
-                                <div class="item">5</div>
-                                <div class="item">6</div>
+                                <div class="item"></div>
+                                <div class="item"></div>
                                 <div class="item">
                                     <div class="image"></div>
                                     <div class="text">독보적인 퀄리티 우린품격을입어요</div>
