--- a/피로그래밍 홈페이지/index.html
+++ b/피로그래밍 홈페이지/index.html
@@ -2,10 +2,197 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
+    <title>피로그래밍</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
-    
+    <div class="container">
+        <header class="main-header">
+            <div class="header-container">
+                <div id="header-icon">
+                    <a href="#">
+                        <img src="favicon.png" alt="logo">
+                    </a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li class="selected-nav">
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Interview</a>
+                    </li>
+                    <li>
+                        <a href="#">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#">Recruit</a>
+                    </li>
+                </ul>
+                
+            </div>
+        </header>
+        <section class="section-portfolio">
+            <header class="header-portfolio">
+                <div></div>
+                <div>
+                    <span id="center">21기</span>
+                </div>
+                <div id="right">
+                    <span >20기 ></span>
+                </div>
+            </header>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">HireHub</div>
+                    <div class="project-content--introduction">
+                      <p>효율적인 인재 영입의 시작</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">이건희</li>   
+                      <li>손영웅</li>           
+                      <li>장지요</li>   
+                      <li>전지훈</li>
+                      <li>주유민</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">HireHub</div>
+                    <div class="project-content--introduction">
+                      <p>효율적인 인재 영입의 시작</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">이건희</li>   
+                      <li>손영웅</li>           
+                      <li>장지요</li>   
+                      <li>전지훈</li>
+                      <li>주유민</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">Feel Buddy</div>
+                    <div class="project-content--introduction">
+                      <p>진정한 '나'를 찾는 여정</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">나예원</li>   
+                      <li>최승호</li>           
+                      <li>전진명</li>   
+                      <li>이민수</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">AAYO</div>
+                    <div class="project-content--introduction">
+                      <p>간편한 단체 커피 주문을 위한 카페 메뉴 취합 서비스</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">안시환</li>   
+                      <li>김민수</li>           
+                      <li>이송민</li>   
+                      <li>이지현</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">피로타임</div>
+                    <div class="project-content--introduction">
+                      <p>피로그래머들을 위한 커뮤니티 플랫폼</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">김주희</li>   
+                      <li>손관우</li>           
+                      <li>이수용</li>   
+                      <li>이연진</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">Oddy</div>
+                    <div class="project-content--introduction">
+                      <p>설레는 여행 계획하기, 오디와 함께해요!</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">유태연</li>   
+                      <li>고화현</li>           
+                      <li>이의진</li>   
+                      <li>편선아</li>
+                    </ul>
+                  </div>
+            </div>
+            <div class="div-portfolio">
+                <div class="porject-more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="porject-pic"></div>
+                <div class="project-content">
+                    <div class="project-content--name">동아리타임</div>
+                    <div class="project-content--introduction">
+                      <p>동아리 소통과 만남의 필수 앱, 동아리타임!</p>
+                    </div>
+                    <ul class="project-content--team">             
+                      <li class="leader">나경원</li>   
+                      <li>강민석</li>           
+                      <li>하동현</li>   
+                      <li>한라현</li>
+                      <li>황다예</li>
+                    </ul>
+                  </div>
+            </div>
+        </section>
+        <footer class="detail"></footer>
+    </div>
 </body>
 </html>
