feat: 프로젝트 로고 적용

--- a/피로그래밍 홈페이지/index.html
+++ b/피로그래밍 홈페이지/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.png">
     <title>피로그래밍</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -12,7 +12,7 @@
             <div class="header-container">
                 <div id="header-icon">
                     <a href="#">
-                        <img src="favicon.png" alt="logo">
+                        <img src="./img/favicon.png" alt="logo">
                     </a>
                 </div>
                 <ul>
@@ -49,12 +49,14 @@
                 </div>
             </header>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
+                <div class="project-pic">
+                    <img src="./img/hirehub.jpg" alt="project logo">
+                </div>
                 <div class="project-content">
                     <div class="project-content--name">HireHub</div>
                     <div class="project-content--introduction">
@@ -70,33 +72,14 @@
                   </div>
             </div>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
-                <div class="project-content">
-                    <div class="project-content--name">HireHub</div>
-                    <div class="project-content--introduction">
-                      <p>효율적인 인재 영입의 시작</p>
-                    </div>
-                    <ul class="project-content--team">             
-                      <li class="leader">이건희</li>   
-                      <li>손영웅</li>           
-                      <li>장지요</li>   
-                      <li>전지훈</li>
-                      <li>주유민</li>
-                    </ul>
-                  </div>
-            </div>
-            <div class="div-portfolio">
-                <div class="porject-more">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="project-pic">
+                    <img src="./img/feelbuddy.jpg" alt="project logo">
                 </div>
-                <div class="porject-pic"></div>
                 <div class="project-content">
                     <div class="project-content--name">Feel Buddy</div>
                     <div class="project-content--introduction">
@@ -111,12 +94,14 @@
                   </div>
             </div>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
+                <div class="project-pic">
+                    <img src="./img/aayo.png" alt="project logo">
+                </div>
                 <div class="project-content">
                     <div class="project-content--name">AAYO</div>
                     <div class="project-content--introduction">
@@ -131,12 +116,14 @@
                   </div>
             </div>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
+                <div class="project-pic">
+                    <img src="./img/pirotime.png" alt="project logo">
+                </div>
                 <div class="project-content">
                     <div class="project-content--name">피로타임</div>
                     <div class="project-content--introduction">
@@ -151,12 +138,14 @@
                   </div>
             </div>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
+                <div class="project-pic">
+                    <img src="./img/oddy.png" alt="project logo">
+                </div>
                 <div class="project-content">
                     <div class="project-content--name">Oddy</div>
                     <div class="project-content--introduction">
@@ -171,12 +160,14 @@
                   </div>
             </div>
             <div class="div-portfolio">
-                <div class="porject-more">
+                <div class="project-more">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="porject-pic"></div>
+                <div class="project-pic">
+                    <img src="./img/동아리타임.png" alt="project logo">
+                </div>
                 <div class="project-content">
                     <div class="project-content--name">동아리타임</div>
                     <div class="project-content--introduction">
