feat:hover, portfolio 기능 90% 완성

--- a/피로그래밍 홈페이지/index.html
+++ b/피로그래밍 홈페이지/index.html
@@ -50,9 +50,9 @@
             </header>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/hirehub.jpg" alt="project logo">
@@ -73,9 +73,9 @@
             </div>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/feelbuddy.jpg" alt="project logo">
@@ -95,9 +95,9 @@
             </div>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/aayo.png" alt="project logo">
@@ -117,9 +117,9 @@
             </div>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/pirotime.png" alt="project logo">
@@ -139,9 +139,9 @@
             </div>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/oddy.png" alt="project logo">
@@ -161,9 +161,9 @@
             </div>
             <div class="div-portfolio">
                 <div class="project-more">
+                    <div class="more"></div>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="more"></div>
                 </div>
                 <div class="project-pic">
                     <img src="./img/동아리타임.png" alt="project logo">
