--- a/피로그래밍 홈페이지/index.html
+++ b/피로그래밍 홈페이지/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/apple-icon.png">
     <title>피로그래밍</title>
     <link rel="stylesheet" href="./style.css">
 </head>
