--- a/피로그래밍 홈페이지/index.html
+++ b/피로그래밍 홈페이지/index.html
@@ -35,7 +35,12 @@
                         <a href="#">Recruit</a>
                     </li>
                 </ul>
-                
+                <label for="hamburger" id="hamburger-icon">
+                    <input type="checkbox">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </label>
             </div>
         </header>
         <section class="section-portfolio">
@@ -183,7 +188,72 @@
                   </div>
             </div>
         </section>
-        <footer class="detail"></footer>
+        <footer class="footer-top">
+            <div class="footer-container">
+                <ul class="footer-contact">
+                    <li>
+                        <a href="#" class="rule-line">Pirogramming 회칙 ></a>
+                    </li>
+                    <div class="footer-icons">
+                        <li>
+                            <a href="">
+                                <div class="emoji">
+                                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/images/icons/kakao.svg" alt="kakao">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="emoji">
+                                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/images/icons/github.svg" alt="github" id="github-emoji">                            
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="emoji">
+                                    <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/images/icons/instagram.svg" alt="instagram">
+                                </div>
+                            </a>
+                        </li>
+                    </div>
+                    <li>
+                        <a href="#" class="footer-mail">
+                            <div class="emoji">
+                                <img src="https://piro-homepage-bucket.s3.ap-northeast-2.amazonaws.com/images/icons/gmail.svg" alt="gmail">
+                            </div>
+                            pirogramming.official@gmail.com
+                        </a>
+                    </li>
+                </ul>
+                <ul class="footer-nav">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Protfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Interview</a>
+                    </li>
+                    <li>
+                        <a href="#">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#">Recruit</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <footer class="footer-buttom">
+            <div class="fb-sec">
+                <span>© Pirogramming. 2023 All rights reserved.</span>
+            </div>
+        </footer>
+
     </div>
 </body>
 </html>
