인터뷰 섹션 완성

--- a/피로그래밍 홈페이지/interview.html
+++ b/피로그래밍 홈페이지/interview.html
@@ -82,7 +82,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">고화현</div>
@@ -105,7 +105,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">김민수</div>
@@ -128,7 +128,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">김주희</div>
@@ -151,7 +151,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">나경원</div>
@@ -174,7 +174,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">나예원</div>
@@ -197,7 +197,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">손관우</div>
@@ -220,7 +220,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">손영웅</div>
@@ -243,7 +243,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">안시환</div>
@@ -266,7 +266,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">유태연</div>
@@ -289,7 +289,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이건희</div>
@@ -312,7 +312,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이민수</div>
@@ -335,7 +335,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이송민</div>
@@ -358,7 +358,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이수용</div>
@@ -381,7 +381,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이연진</div>
@@ -404,7 +404,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이의진</div>
@@ -427,7 +427,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">이지현</div>
@@ -450,7 +450,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">장지요</div>
@@ -473,7 +473,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">전지훈</div>
@@ -496,7 +496,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">전진명</div>
@@ -519,7 +519,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">주유민</div>
@@ -542,7 +542,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">최승호</div>
@@ -565,7 +565,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">편선아</div>
@@ -588,7 +588,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">하동현</div>
@@ -611,7 +611,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">한라현</div>
@@ -634,7 +634,7 @@
                 <div class="div-interview">
                     <div class="interview-top">
                         <div class="interviewer-pic">
-                            <!-- 사진 -->
+                            <img src="./img/interview-img.jpg" alt="interview_img">
                         </div>
                         <div class="interview-content">
                             <div class="interviewe-name">황다예</div>
