타이머 완성

--- a/Javascript 스톱워치/index.html
+++ b/Javascript 스톱워치/index.html
@@ -42,10 +42,7 @@
                     <img src="./delete.png" alt="" id="delete">
                 </button>
             </header>
-            <div class="record-container">
-                <img src="./checkbox-blank.png" alt="">
-                <div class="record"></div>
-            </div>
+            <div id="record-list"></div>
         </div>
     </div>
     <script src="./script.js"></script>
